--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,7 +17,9 @@
 //$gray-800: #343a40 !default;
 //$gray-900: #212529 !default;
 //$black:    #000 !default;
+$gray-10: #1A1A1A; // black 90%
 $gray-20: #333333; // black 80%
+$gray-40: #666666; // black 60%
 $gray-40: #666666; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #ADADAD; // black 32%
