--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -275,7 +275,7 @@
     }
 
     a{
-      height: rem(124px);
+      // height: rem(124px);
       @extend .d-flex;
       @extend .justify-content-center;
       @extend .align-items-center;
