--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -6,6 +6,7 @@ block vars
 block content
   section.section-aboutus.section-banner
     .heading-overlay
+     a(href="https://codecuriosity.org/" target="_blank")
       img.img-fluid.img-banner(src="./images/gift-group-on-banner.png" alt="")
   section.section-about_info
     .container
