--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -14,7 +14,7 @@ block content
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
-            h5.card-title Rubyconf India 2018
+            h5.card-title Rubyconf India
             p.card-text  RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
             .link-more
               a(href="https://www.rubyconfindia.org/")
@@ -23,7 +23,7 @@ block content
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
-            h5.card-title Rails Girls Pune 2018
+            h5.card-title Rails Girls Pune
             p.card-text During the one-day workshop for women, we’ll dive into the magical world of Ruby on Rails. The event is aimed at encouraging more women to choose a career in tech, by exposing them to a full stack web development framework like Ruby on Rails.
             .link-more
               a(href="http://railsgirls.com/pune.html")
@@ -32,7 +32,7 @@ block content
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
-            h5.card-title Gophercon India 2018
+            h5.card-title Gophercon India
             p.card-text Go is an open source project developed by a team at Google and many contributors from the open source community.
             .link-more
               a(href="http://upcomingengineer.com/opportunities/gophercon-india-go-lang-2018/")
