Edited: Misc ui changes

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -129,7 +129,8 @@
     }
 
     p{
-      letter-spacing: normal;
+      letter-spacing: normal  ;
+      font-weight: 300;
       margin: 0 0 rem(13px);
     }
   }
