--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -1,4 +1,6 @@
 .section-innovation{
+  background: transparent url('../images/innov-bg-big.jpg') no-repeat center rem(-85px);
+  background-size: cover; 
 
     &.section-content {
       padding: rem(60px 0 80px);
