Replaced images and minor fixes

--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -21,18 +21,19 @@ block content
           p.font-weight-thin Number of posts - 3
           .btn-wrap
             a.btn.btn-outline-white(href="job-description.html") View Details
-        .jobs
-          h4.title Golang Developer
-          p.font-weight-light Experience: minimum 3 years
-          p.font-weight-thin Number of posts - 1
-          .btn-wrap
-            a.btn.btn-outline-white(href="job-description.html") View Details
+        //=
+          .jobs
+            h4.title Golang Developer
+            p.font-weight-light Experience: minimum 3 years
+            p.font-weight-thin Number of posts - 1
+            .btn-wrap
+              a.btn.btn-outline-white(href="job-description.html") View Details
         .jobs
           h4.title React JS Developer
           p.font-weight-light Experience: minimum 3 years
           p.font-weight-thin Number of posts - 1
           .btn-wrap
-            a.btn.btn-outline-white(href="job-description.html") View Details
+            a.btn.btn-outline-white(href="job-description-react.html") View Details
       .testimonials-wrap
         h2.wrap-title  Testimonials
         .card-wrap.-striped
@@ -43,7 +44,7 @@ block content
               .testimonial
                 .employee-info
                   h4 Sahil Bhatia
-                  p Senior Software Developer
+                  p 4+ years @ Josh
                 p.card-text Josh has done a great job of making me feel like I’m part of the team. Everyone is approachable and willing to take time out of their busy day to help each other out. I feel very empowered by—and confident in—my teammates, which makes for a great work environment.
               .scroll-top
                 a.btn-scroll(href='#careerTop') go to top
@@ -54,7 +55,7 @@ block content
               .testimonial
                 .employee-info
                   h4 Shweta Kale
-                  p Senior Developer
+                  p 4+ years @ Josh
                 p.card-text "I enjoy coming to work! What else one will need from their job?! Here you will find so many passionate and dedicated people around you, all eager to share their knowledge. Credit goes to superbly maintained open culture. Improving my technical and soft skills is made easy and fun!"
               .scroll-top
                 a.btn-scroll(href='#careerTop') go to top
@@ -65,7 +66,7 @@ block content
               .testimonial
                 .employee-info
                   h4 Ashvini Vibhute
-                  p Senior Software Developer
+                  p 3+ years @ Josh
                 p.card-text Flex time, Quality work, great environment, and learning opportunities are the reasons why I enjoy coming to work!. My colleagues are very organized and easy to work with. The overall experience is really great and I am very happy to be a part of this organization!
               .scroll-top
                 a.btn-scroll(href='#careerTop') go to top
@@ -76,7 +77,7 @@ block content
               .testimonial
                 .employee-info
                   h4 Kiran
-                  p Senior Software Developer
+                  p 1+ years @ Josh
                 p.card-text Josh is offering me a very good work environment. I can work on various trending technologies. My colleagues are very helpful and supportive. I am happy for being part of this organization :.)
               .scroll-top
                 a.btn-scroll(href='#careerTop') go to top
