--- a/src/views/job-description.jade
+++ b/src/views/job-description.jade
@@ -10,7 +10,7 @@ block content
         h2 ROR Developer
         p Experience : 3+ years in ROR
         p.text-left.font-weight-normal Description
-        ul.list-unstyled.list-description
+        ul.list-group
           li Should have worked with latest versions of ruby and rails
           li Good knowledge of working with atleast one of MySQL, PostgreSQL
           li Knowledge of mongodb will be added advantage
@@ -20,14 +20,18 @@ block content
           li Knowledge of writing est cases for views and JavaScript will be added advantage
           li Good knowledge of deployment using mina or capistrano
           li Good knowledge of Github
-          li 
-            p Added advantage - worked in team and experience of handling team of few members 
-            p Should have good communication skills 
-            p Experience of client communication and directly working with client
-          li 
-            p Added advantage
-            p Active in open source community
-            p Presented paper at Ruby conf in India or abroad
-        .btn-wrap.text-center
-          a.btn.btn-outline-gray(href="job-apply.html") Apply
+        br
+        p.text-left.font-weight-normal Added advantage
+        ul.list-group
+          li worked in team and experience of handling team of few members 
+          li Should have good communication skills 
+          li Experience of client communication and directly working with client
+          li Added advantage
+          li Active in open source community
+          li Presented paper at Ruby conf in India or abroad
+        br
+        .text-center Send mail to careers@joshsoftware.com
+        //=
+          .btn-wrap.text-center
+            a.btn.btn-outline-gray(href="job-apply.html") Apply
 
