--- a/src/views/inc/footer-home.jade
+++ b/src/views/inc/footer-home.jade
@@ -47,5 +47,5 @@ footer.josh-footer
         a.nav-link(href="career.html") Career
         a.nav-link(href="contact-us.html") Contact Us
     p.text-policy.text-center.mb-3
-      a(href="javascript:void(0);") View Privacy Policy
+      a(href="./pdf/PrivacyPolicyWebsite.pdf", target='_blank') View Privacy Policy
     p.text-copyright.text-center.mb-3 Copyright © 2007 - 2018 Josh Software Pvt. Ltd.
