--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -23,7 +23,7 @@ footer.josh-footer
     .social-links-wrap
       .policy-wrap
         p.text-policy
-          a(href="javascript:void(0);") View Privacy Policy
+          a(href="./pdf/PrivacyPolicyWebsite.pdf", target='_blank') View Privacy Policy
         p.text-copyright Copyright © 2007 - 2018 Josh Software Pvt. Ltd.
       .connect-wrap
         p Connect with us
