--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -15,7 +15,7 @@ block content
           h1 DISRUPT YOUR INDUSTRY
           p We partner with our clients to conceptualize and create sustainable web-based solutions, enabling high performance and growth in their businesses. We deliver business consultation to simplify technological complexities for better industry practices.
 
-    section#expertiseSlide.section-home.section-expertise.bg-props(style='background-image:url(./images/home-industries.jpg)', data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#expertiseSlide')
+    section#expertiseSlide.section-home.section-expertise.bg-props(data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#expertiseSlide')
       .container
         h1.section-heading Domain Expertise
         .text-center
@@ -25,7 +25,7 @@ block content
             i.align-middle.icon-arrow-right
             | View All Domains
 
-    section#workSlide.section-home.section-work.bg-props(style='background-color:#62AAAC', data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#workSlide')
+    section#workSlide.section-home.section-work.bg-props(data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#workSlide')
       .container
         h1.section-heading What We Do?
         svg.services-banner-svg(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 1245 546')
@@ -177,7 +177,7 @@ block content
             i.align-middle.icon-arrow-right
             | View Our Work
 
-    section#clientsSlide.section-home.section-clients.bg-props(style='background-color:#F4F4F4', data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#clientsSlide')
+    section#clientsSlide.section-home.section-clients.bg-props(data-center='background-position: 50% 0px;', data-top-bottom='background-position: 50% -100px;', data-bottom-top='background-position: 50% 0px;', data-anchor-target='#clientsSlide')
       .container
         h1.section-heading Our Top Clients
         ul.list-unstyled.list-client
@@ -232,7 +232,7 @@ block content
             i.align-middle.icon-arrow-right
             | View Testimonials
 
-    section#aboutSlide.section-home.section-about(style='background-color:#D1645D', data-center='background-position: 50% 0px;', data-bottom-top='background-position: 50% -100px;', data-anchor-target='#aboutSlide')
+    section#aboutSlide.section-home.section-about.bg-props(data-center='background-position: 50% 0px;', data-bottom-top='background-position: 50% -100px;', data-anchor-target='#aboutSlide')
       .container
         h1.section-heading About Us
         .about-wrap
