--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -9,15 +9,15 @@ header.josh-header.fixed-top
         .navbar-nav.ml-auto
           a.nav-item.nav-link(href='innovation.html', class= (page === "Innovation") ? "active" : "") Innovation
           .dropdown
-            a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "Services" || page === "Our Work") ? "active" : "") Services
-            .dropdown-menu(aria-labelledby='dropdownMenuLink')
+            a#servicesDropdownMenu.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "Services" || page === "Our Work") ? "active" : "") Services
+            .dropdown-menu(aria-labelledby='servicesDropdownMenu')
               a.dropdown-item(href='services.html', class= (page === "Services") ? "active" : "") Services
               a.dropdown-item(href='services.html#ourWork') Our Work
           a.nav-item.nav-link(href='technologies.html', class= (page === "Technologies") ? "active" : "") Technologies
           a.nav-item.nav-link(href='industries.html', class= (page === "Industries") ? "active" : "") Industries
           .dropdown
-            a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "About Us" || page === "Open Source" || page === "News" || page === "Our Team" || page === "Career" || page === "Contact Us" || page === "Testimonials") ? "active" : "") Company
-            .dropdown-menu(aria-labelledby='dropdownMenuLink')
+            a#companyDropdownMenu.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "About Us" || page === "Open Source" || page === "News" || page === "Our Team" || page === "Career" || page === "Contact Us" || page === "Testimonials") ? "active" : "") Company
+            .dropdown-menu(aria-labelledby='companyDropdownMenu')
               a.dropdown-item(href='about-us.html', class= (page === "About Us") ? "active" : "") About Us
               a.dropdown-item(href='open-source.html', class= (page === "Open Source") ? "active" : "") Open Source
               a.dropdown-item(href='about-us.html#news') News
