Edited: Iframe changes

--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -30,7 +30,7 @@ block content
           ul.list-unstyled.list-media
             li.list-media-item
               .card.card-media
-                iframe(src='https://www.youtube.com/embed/6FbmpdJrZxc', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+                iframe(src='https://www.youtube.com/embed/6FbmpdJrZxc?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
             li.list-media-item
               .card.card-media
                 a.btn-link(href="https://economictimes.indiatimes.com/tech/software/josh-software-sets-up-two-firms-in-internet-of-things-and-app-development-space/articleshow/51322636.cms", target="_blank") 
