--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -293,6 +293,7 @@ button:focus {
   iframe{
     width: auto;
     height: rem(310px);
+    border: none;
 
     @include media-breakpoint-down(md) {
       height: rem(290px);
