--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -70,16 +70,16 @@ block content
         ul.list-unstyled.list-media
           li.list-media-item
             .card.card-media
-              iframe(src='https://www.youtube.com/embed/OtfyLtsrmCA?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+              iframe(src='https://www.youtube.com/embed/OtfyLtsrmCA?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              iframe(src='https://www.youtube.com/embed/8nU08YDOb58?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+              iframe(src='https://www.youtube.com/embed/8nU08YDOb58?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              iframe(src='https://www.youtube.com/embed/N98cnuW0bm0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+              iframe(src='https://www.youtube.com/embed/N98cnuW0bm0?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              iframe(src='https://www.youtube.com/embed/e_7qhUMJJ8k?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+              iframe(src='https://www.youtube.com/embed/e_7qhUMJJ8k?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
       .btn-wrap
         a.btn.btn-gray(href="team.html") Our Team
         a.btn.btn-outline-gray(href="career.html") Career
