--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -280,3 +280,13 @@ block content
           p
             i.align-middle.icon-phone
             | +91-9028014611
+
+
+// Global site tag (gtag.js) - Google Analytics
+script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-123082738-1')
+script.
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-123082738-1');
+
