Edited: Few changes in Index and Contact page

--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -11,14 +11,14 @@ block content
         h1.section-heading We’d love to hear from you!
         p Reach us by using this form
         form.form-contact(data-toggle="validator",id='contact-form')
-          .form-row
+          .row
             .col-md-6
               .form-group
                 label(for="input-fname") Name
                 span.text-danger *
                 input#input-fname.form-control(type="text",required)
               .form-group
-                label(for="input-email") Email
+                label(for="inputEmail") Email
                 span.text-danger *
                 input#inputEmail.form-control(type="email",required)
               .form-group
