Edited: Home page about section button

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -260,7 +260,7 @@ block content
             .stats
               h4 60%
               p Clients that are working with us <br>for more than 5 years
-            .stats.stats-button.d-none.d-md-block.d-lg-none
+            .stats.stats-button.d-block.d-lg-none
               a.btn.btn-outline-white(href="about-us.html") Company
             .stats.stats-button
               a.btn.btn-outline-white(href="team.html") Our Team
