Added: Image tag textual alternative

--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -305,4 +305,10 @@ button:focus {
     
   }
 }
+
+img {
+  font-size: rem(12px);
+  font-weight: 300;
+  letter-spacing: 0.5px;
+}
 /* shared end */
