--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -8,8 +8,8 @@ block content
     .banner-content
       h1 WE ARE RECRUITING
       P And you will Love working here!
-      img.img-fluid.img-desktop(src="./images/career-benefits.svg", alt="")
-      img.img-fluid.img-mobile(src="./images/career-benefits-mobile.svg", alt="")
+      img.img-fluid.img-desktop(src="./images/career-benefits.svg", alt="Benefits")
+      img.img-fluid.img-mobile(src="./images/career-benefits-mobile.svg", alt="Benefits")
   
   section.section-career.section-content
     .container
@@ -40,7 +40,7 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="./images/sahil-bhatia@2x.jpg", alt="")
+                img.card-img(src="./images/sahil-bhatia@2x.jpg", alt="Sahil Bhatia")
               .testimonial
                 .employee-info
                   h4 Sahil Bhatia
@@ -51,7 +51,7 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="./images/shweta-kale@2x.jpg", alt="")
+                img.card-img(src="./images/shweta-kale@2x.jpg", alt="Shweta Kale")
               .testimonial
                 .employee-info
                   h4 Shweta Kale
@@ -62,7 +62,7 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="./images/ashvini-vibhute@2x.jpg", alt="")
+                img.card-img(src="./images/ashvini-vibhute@2x.jpg", alt="Ashvini Vibhute")
               .testimonial
                 .employee-info
                   h4 Ashvini Vibhute
@@ -73,10 +73,10 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="./images/kiran-deshmukh@2x.jpg", alt="")
+                img.card-img(src="./images/kiran-deshmukh@2x.jpg", alt="Kiran Deshmukh")
               .testimonial
                 .employee-info
-                  h4 Kiran
+                  h4 Kiran Deshmukh
                   p 1+ years @ Josh
                 p.card-text Josh is offering me a very good work environment. I can work on various trending technologies. My colleagues are very helpful and supportive. I am happy for being part of this organization :.)
               .scroll-top
