--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -2,7 +2,7 @@ header.josh-header.fixed-top
   .container
     nav.navbar.navbar-expand-lg.josh-navbar
       a.navbar-brand(href='./')
-        img(src='./images/josh-logo.svg', alt='')
+        img(src='./images/josh-logo.svg', alt='Josh Software')
       button.navbar-toggler.p-0.border-0(type='button', data-toggle='offcanvas')
         i.icon-bars
       #joshOffcanvasNavbar.navbar-collapse.offcanvas-collapse
