Added: CDN for assets

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,8 @@
 /* variables */
 
+// Assets URL
+$assets_url: "http://new.joshsoftware.com:8080/";
+
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
