--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -19,7 +19,7 @@ block content
       .container
         h1.section-heading Domain Expertise
         .text-center
-          img.img-fluid.img-expertise(src="./images/expertise.svg", alt="Domain Expertise")
+          img.img-fluid.img-expertise(src=asset_url + "images/expertise.svg", alt="Domain Expertise")
         .link-box.mb-4
           a.text-white(href="industries.html")
             i.align-middle.icon-arrow-right
@@ -183,49 +183,49 @@ block content
         ul.list-unstyled.list-client
           li
             a(href="javascript:void(0);")
-              img.img-fluid(src="./images/clogo-star.jpg", alt="Star India")
+              img.img-fluid(src=asset_url + "images/clogo-star.jpg", alt="Star India")
           li
             a(href="javascript:void(0);")
-              img.img-fluid(src="./images/clogo-gojek.jpg", alt="GO JEK")
+              img.img-fluid(src=asset_url + "images/clogo-gojek.jpg", alt="GO JEK")
           li
             a(href="http://www.dealsignal.com/",target="_blank")
-              img.img-fluid(src="./images/clogo-dealsignal.jpg", alt="DealSignal")
+              img.img-fluid(src=asset_url + "images/clogo-dealsignal.jpg", alt="DealSignal")
           li
             a(href="http://brandscope.com.au/",target="_blank")
-              img.img-fluid(src="./images/clogo-brandscope.jpg", alt="Brandscope")
+              img.img-fluid(src=asset_url + "images/clogo-brandscope.jpg", alt="Brandscope")
           li
             a(href="http://www.clubbuzz.co.uk/",target="_blank")
-              img.img-fluid(src="./images/clogo-clubbuzz.jpg", alt="ClubBuzz")
+              img.img-fluid(src=asset_url + "images/clogo-clubbuzz.jpg", alt="ClubBuzz")
           li
             a(href="https://www.cubictree.com/",target="_blank")
-              img.img-fluid(src="./images/clogo-cubictree.jpg", alt="Cubictree")
+              img.img-fluid(src=asset_url + "images/clogo-cubictree.jpg", alt="Cubictree")
           li
             a(href="https://www.willswayfoundation.us/",target="_blank")
-              img.img-fluid(src="./images/clogo-we3.jpg", alt="We3")
+              img.img-fluid(src=asset_url + "images/clogo-we3.jpg", alt="We3")
           li
             a(href="https://thepediatricnetwork.com/#/",target="_blank")
-              img.img-fluid(src="./images/clogo-tpn.jpg", alt="The Pediatric Network")
+              img.img-fluid(src=asset_url + "images/clogo-tpn.jpg", alt="The Pediatric Network")
           li
             a(href="http://www.freedomfromdiabetes.org/Program",target="_blank")
-              img.img-fluid(src="./images/clogo-ffd.jpg", alt="Freedom From Diabetes")
+              img.img-fluid(src=asset_url + "images/clogo-ffd.jpg", alt="Freedom From Diabetes")
           li
             a(href="http://www.synergydesignsolutions.com.sg/",target="_blank")
-              img.img-fluid(src="./images/clogo-synergy.jpg", alt="Synergy Design Solutions")
+              img.img-fluid(src=asset_url + "images/clogo-synergy.jpg", alt="Synergy Design Solutions")
           li
             a(href="https://next.merchdirect.com/",target="_blank")
-              img.img-fluid(src="./images/clogo-mdny.jpg", alt="Merch Direct")
+              img.img-fluid(src=asset_url + "images/clogo-mdny.jpg", alt="Merch Direct")
           li
             a(href="https://fundamentor.com/",target="_blank")
-              img.img-fluid(src="./images/clogo-fundamentor.jpg", alt="Fundamentor")
+              img.img-fluid(src=asset_url + "images/clogo-fundamentor.jpg", alt="Fundamentor")
           li
             a(href="http://www.skoutdeals.com/",target="_blank")
-              img.img-fluid(src="./images/clogo-skoutdeals.jpg", alt="Skout Deals")
+              img.img-fluid(src=asset_url + "images/clogo-skoutdeals.jpg", alt="Skout Deals")
           li
             a(href="javascript:void(0);")
-              img.img-fluid(src="./images/clogo-druva.jpg", alt="Druva")
+              img.img-fluid(src=asset_url + "images/clogo-druva.jpg", alt="Druva")
           li
             a(href="https://quickinsure.co.in/",target="_blank")
-              img.img-fluid(src="./images/clogo-quickinsure.jpg", alt="Quickinsure")
+              img.img-fluid(src=asset_url + "images/clogo-quickinsure.jpg", alt="Quickinsure")
 
         .link-box
           a(href="testimonial.html")
@@ -249,7 +249,7 @@ block content
             .stats.stats-button.d-none.d-lg-block
               a.btn.btn-outline-white(href="about-us.html") Company
           .about-banner
-            img.img-fluid(src="./images/about.png", alt="Josh Leadership")
+            img.img-fluid(src=asset_url + "images/about.png", alt="Josh Leadership")
           .stats-box
             .stats
               h4 35+
