--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -1,5 +1,8 @@
 doctype html
 html(lang="en")
+  block vars
+   -var asset_url = "http://new.joshsoftware.com:8080/"
+
   head
     block head
       meta(charset="utf-8")
